[package]
name = "trithemius"
version = "0.1.0"
edition = "2021"

[lib]
name = "trithemiuslib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
libp2p = { version = "0.44.0", features = ["tcp-tokio"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
env_logger = "0.9.0"
async-trait = "0.1.51"
crossterm = { version = "0.21.0", features = ["event-stream"] }
tui = { version = "0.16.0", default-features = false, features = ["crossterm", "serde"] }
resize = "0.7.2"
chrono = "0.4.19"
rgb = "0.8.27"
unicode-width = "0.1.9"
clap = "2.33.3"
serde = "1.0.130"
void = "1.0.2"
simple-logging = "2.0.2"
log = "0.4.14"
futures-lite = "1.12.0"
