[package]
name = "trithemius"
version = "0.1.0"
edition = "2021"

[lib]
name = "trithemiuslib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
libp2p = { version = "0.46.1", features = ["tcp-tokio"] }
tokio = { version = "1.12.0", features = ["fs", "macros", "rt-multi-thread", "io-std", "sync"] }
env_logger = "0.9.0"
async-trait = "0.1.51"
crossterm = { version = "0.21.0", features = ["event-stream"] }
tui = { version = "0.16.0", default-features = false, features = ["crossterm", "serde"] }
resize = "0.7.2"
chrono = "0.4.19"
rgb = "0.8.27"
unicode-width = "0.1.9"
clap = "2.33.3"
serde = "1.0.130"
void = "1.0.2"
simple-logging = "2.0.2"
log = "0.4.14"
futures-lite = "1.12.0"
lazy_static = "1.4.0"
regex = "1.5.4"
async-recursion = "0.3.2"
tokio-test = "0.4.2"
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"
base64 = "0.13.0"
byteorder = "1.4.3"
multiaddr = "0.14.0"
libp2p-core = "0.34.0"
libp2p-tcp = "0.34.0"
base32 = "0.4.0"
socks5-server = "0.8.0"
socks5-proto = "0.3.1"
tor-stream = "0.3.0"
parking_lot = "0.12.1"
tokio-socks = "0.5.1"
libp2p-dns = { version = "0.34.0", features = ["tokio"] }
circular-queue = "0.2.6"
